// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative min-h flex overflow-hidden overflow-x"
      data-activation-direction="none"
      data-orientation="horizontal"
    >
      <div
        class="after:absolute after:content-[""] after:bottom-0 after:left-0 after:right-0 after:h-[1px] after:bg-gray after:z-0 flex-auto inline-block relative whitespace-nowrap"
      >
        <div
          class="relative flex"
          data-activation-direction="none"
          data-orientation="horizontal"
          role="tablist"
        >
          <button
            aria-disabled="false"
            aria-selected="false"
            class="opacity-70 m-0 [&:not(:last-of-type)]:mr p-0 pb-[0.4375rem] text-center bg-transparent z-10 rounded-none text-inheritColor shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-hidden items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-orientation="horizontal"
            data-testid="tab-1"
            id="base-ui-:r0:"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="opacity-70 m-0 [&:not(:last-of-type)]:mr p-0 pb-[0.4375rem] text-center bg-transparent z-10 rounded-none text-inheritColor shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-hidden items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-orientation="horizontal"
            data-testid="tab-2"
            id="base-ui-:r1:"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs renders in full width 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative min-h flex overflow-hidden"
      data-activation-direction="none"
      data-orientation="horizontal"
    >
      <div
        class="w-full overflow-hidden after:absolute after:content-[""] after:bottom-0 after:left-0 after:right-0 after:h-[1px] after:bg-gray after:z-0 flex-auto inline-block relative whitespace-nowrap"
      >
        <div
          class="relative flex"
          data-activation-direction="none"
          data-orientation="horizontal"
          role="tablist"
        >
          <button
            aria-disabled="false"
            aria-selected="false"
            class="opacity-70 m-0 [&:not(:last-of-type)]:mr p-0 pb-[0.4375rem] text-center bg-transparent z-10 rounded-none text-inheritColor shrink grow basis-0 min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-hidden items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-orientation="horizontal"
            data-testid="tab-1"
            id="base-ui-:re:"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="opacity-70 m-0 [&:not(:last-of-type)]:mr p-0 pb-[0.4375rem] text-center bg-transparent z-10 rounded-none text-inheritColor shrink grow basis-0 min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-hidden items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-orientation="horizontal"
            data-testid="tab-2"
            id="base-ui-:rf:"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs renders in vertical orientation 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative min-h flex overflow-hidden w-[200px] m-0 flex-col overflow-x"
      data-activation-direction="none"
      data-orientation="vertical"
    >
      <div
        class="pl-2 flex-auto inline-block relative whitespace-nowrap"
      >
        <div
          aria-orientation="vertical"
          class="relative flex flex-col"
          data-activation-direction="none"
          data-orientation="vertical"
          role="tablist"
        >
          <button
            aria-disabled="false"
            aria-selected="false"
            class="opacity-100 first-of-type:mt last-of-type:mb my-1 mx-0 py-2 px-4 text-left rounded-l rounded-r transition-all w-full overflow-hidden bg-gray hover:bg-gray text-graphite hover:text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-hidden items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-orientation="vertical"
            data-testid="tab-1"
            id="base-ui-:r2:"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full block"
            >
              <div
                class="m-0 text-md text-inherit font-semibold whitespace-nowrap [-webkit-box overflow-hidden text-ellipsis pr-[0.9px] block"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="opacity-100 first-of-type:mt last-of-type:mb my-1 mx-0 py-2 px-4 text-left rounded-l rounded-r transition-all w-full overflow-hidden bg-gray hover:bg-gray text-graphite hover:text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-hidden items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-orientation="vertical"
            data-testid="tab-2"
            id="base-ui-:r3:"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="w-full block"
            >
              <div
                class="m-0 text-md text-inherit font-semibold whitespace-nowrap [-webkit-box overflow-hidden text-ellipsis pr-[0.9px] block"
              >
                Tab 2
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs renders with a pre-selected option 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative min-h flex overflow-hidden overflow-x"
      data-activation-direction="none"
      data-orientation="horizontal"
    >
      <div
        class="after:absolute after:content-[""] after:bottom-0 after:left-0 after:right-0 after:h-[1px] after:bg-gray after:z-0 flex-auto inline-block relative whitespace-nowrap"
      >
        <div
          class="relative flex"
          data-activation-direction="none"
          data-orientation="horizontal"
          role="tablist"
        >
          <button
            aria-disabled="false"
            aria-selected="false"
            class="opacity-70 m-0 [&:not(:last-of-type)]:mr p-0 pb-[0.4375rem] text-center bg-transparent z-10 rounded-none text-inheritColor shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-hidden items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-orientation="horizontal"
            data-testid="tab-1"
            id="base-ui-:r4:"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="true"
            class="opacity-100 m-0 [&:not(:last-of-type)]:mr p-0 pb-[0.4375rem] text-center bg-transparent z-10 rounded-none text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-hidden items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-active=""
            data-composite-item-active=""
            data-orientation="horizontal"
            data-testid="tab-2"
            id="base-ui-:r5:"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 2
              </div>
            </span>
          </button>
          <span
            class="absolute bottom-0 left-0 h-[2px] bg-blue w-[var(--active-tab translate-x-[var(--active-tab transition-[transform,width] duration-300 ease-in"
            data-activation-direction="none"
            data-orientation="horizontal"
            hidden=""
            role="presentation"
            style="--active-tab-left: 0px; --active-tab-right: 0px; --active-tab-top: 0px; --active-tab-bottom: 0px; --active-tab-width: 0px; --active-tab-height: 0px;"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="tab-1-content"
    >
      Tab #
      1
       content
    </div>
  </div>
</div>
`;

exports[`Tabs renders with a pre-selected option using custom value 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative min-h flex overflow-hidden overflow-x"
      data-activation-direction="none"
      data-orientation="horizontal"
    >
      <div
        class="after:absolute after:content-[""] after:bottom-0 after:left-0 after:right-0 after:h-[1px] after:bg-gray after:z-0 flex-auto inline-block relative whitespace-nowrap"
      >
        <div
          class="relative flex"
          data-activation-direction="none"
          data-orientation="horizontal"
          role="tablist"
        >
          <button
            aria-disabled="false"
            aria-selected="true"
            class="opacity-100 m-0 [&:not(:last-of-type)]:mr p-0 pb-[0.4375rem] text-center bg-transparent z-10 rounded-none text-black shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-hidden items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-active=""
            data-composite-item-active=""
            data-orientation="horizontal"
            data-testid="tab-1"
            id="base-ui-:r6:"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 1
              </div>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-selected="false"
            class="opacity-70 m-0 [&:not(:last-of-type)]:mr p-0 pb-[0.4375rem] text-center bg-transparent z-10 rounded-none text-inheritColor shrink-0 max-w min-w sm:min-w md:min-w border-0 cursor-pointer inline-flex outline-hidden items-center select-none align-middle appearance-none justify-center no-underline [-webkit-tap-highlight normal-case whitespace-normal leading-4 relative"
            data-orientation="horizontal"
            data-testid="tab-2"
            id="base-ui-:r7:"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="w-full inline-flex items-center flex-col justify-center"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold leading-[1.1rem]"
              >
                Tab 2
              </div>
            </span>
          </button>
          <span
            class="absolute bottom-0 left-0 h-[2px] bg-blue w-[var(--active-tab translate-x-[var(--active-tab transition-[transform,width] duration-300 ease-in"
            data-activation-direction="none"
            data-orientation="horizontal"
            hidden=""
            role="presentation"
            style="--active-tab-left: 0px; --active-tab-right: 0px; --active-tab-top: 0px; --active-tab-bottom: 0px; --active-tab-width: 0px; --active-tab-height: 0px;"
          />
        </div>
      </div>
    </div>
    <div
      data-testid="tab-1-content"
    >
      Tab #
      1
       content
    </div>
  </div>
</div>
`;
